# nu_plugin_qr

./: Cargo.toml  LICENSE  README.md
src/: main.rs
