[package]
name = "nu_plugin_qr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast_qr = { version = "0.9.0", features = ["svg", "image"] }
image = "0.24.7"
nu-plugin = "0.83.1"
nu-protocol = "0.83.1"
quircs = "0.10.1"
