[package]
name = "nu_plugin_qr"
version = "0.1.0"
edition = "2021"
authors = ["Horasal"]
description = "A nushell plugin for encode/decode QRcode."
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/horasal/nu_plugin_qr"
keywords = ["nushell"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast_qr = { version = "0.9.0", features = ["svg", "image"] }
image = "0.24.7"
nu-plugin = "0.83.1"
nu-protocol = "0.83.1"
quircs = "0.10.1"
